[gd_scene load_steps=2 format=3 uid="uid://ca5a5uyk7dnt"]

[ext_resource type="Script" path="res://common/hurtbox/hurt_box_component.gd" id="1_rtrui"]

[node name="HurtBox" type="Area2D"]
script = ExtResource("1_rtrui")

[node name="HurtShape" type="CollisionShape2D" parent="."]
debug_color = Color(0.996541, 0.0506893, 3.85046e-07, 0.42)

[node name="InvulnirableTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="InvulnirableTimer" to="." method="_on_invulnirable_timer_timeout"]
